# pr-arena

./: .gitignore  ARENA_GUIDE.md  README.md  TERMS.md  TEST_SUMMARY.md  constraints.txt  litellm_proxy_config.yaml  pyproject.toml  test_new_model.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: committest_1216.yml  commiturl_update.yml  firebase-test.yml  openhands-resolver.yml  pr-arena-resolver.yml  pr-arena-workflow.yml  pypi-release.yml
assets/workflows/: pr-arena-resolver.yml
examples/: openhands-resolver.yml
model_testing/: README.md  requirements.txt  test_new_model.py
openhands_resolver/: README.md  commit_only.py  listen_for_decision.py  pyproject.toml  resolve_issues.py  resolver_output.py  send_pull_request.py  test_firebase.py
openhands_resolver/GitHub App/: README.md
prompt_experiments/: .gitignore  README.md  app.js  index.html  requirements.txt  style.css
prompt_experiments/JiseungHong_SYCON-Bench_33/gemini-2.5-pro/basic_prompt/: patch.diff  result.json  summary.json
prompt_experiments/JiseungHong_SYCON-Bench_33/gemini-2.5-pro/no_test_prompt/: patch.diff  result.json  summary.json
prompt_experiments/JiseungHong_SYCON-Bench_33/gemini-2.5-pro/shorter_prompt/: patch.diff  result.json  summary.json
prompt_experiments/JiseungHong_SYCON-Bench_33/gemini-2.5-pro/todo_prompt/: patch.diff  result.json  summary.json
prompt_experiments/prompts/no_test_prompt/: conversation_instructions.jinja
prompt_experiments/prompts/todo_prompt/: user_instructions.jinja
prompt_experiments/scripts/: run_experiment.py
prompt_experiments_display/: README.md  app.js  server.py  style.css  test_diff.html
resolver/: error_tracker.py  listen_for_decision.py  resolve_issue.py  resolver_issue.py  resolver_output.py  secrets.py  send_pull_request.py  utils.py
resolver/analysis/: get_data_from_firebase.py
resolver/prompts/resolve/: basic-followup-conversation-instructions.jinja
tests/: test_daytona_patch.py  test_dependabot_config.py  test_resolve_issue.py  test_resolve_issue_minimal.py  test_resolve_issues.py  test_send_pull_request.py  test_send_pull_request_minimal.py  test_send_pull_request_standalone.py  test_version.py
