[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "resolver"
version = "0.1.0"
description = "PR-Arena: Arena Setting for GitHub Issue Resolver"
authors = ["OpenHands"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "resolver" }
]

[tool.poetry.dependencies]
openhands-ai = "0.40.0"
firebase-admin = "^6.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
black = "*"
types-requests = "*"
pre-commit = "*"
types-toml = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"