[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pr-arena"
version = "0.2.9"
description = "PR-Arena: Arena Setting for GitHub Issue Resolver"
authors = ["OpenHands"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/neulab/pr-arena"
repository = "https://github.com/neulab/pr-arena"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Software Development :: Version Control :: Git"
]
packages = [
    { include = "resolver" }
]

[tool.poetry.dependencies]
python = "^3.12,<3.14"
openhands-ai = "0.40.0"
firebase-admin = ">=6.6,<8.0"
openai = ">=1.99.5,<2.8.0"
google-api-python-client = ">=2.164.0,<3.0.0"
google-api-core = ">=2.10.0,<3.0.0"
google-auth = ">=2.14.1,<3.0.0"
grpcio = ">=1.62.0,<2.0.0"
grpcio-status = ">=1.62.0,<2.0.0"
googleapis-common-protos = ">=1.60.0,<2.0.0"
protobuf = ">=4.21.6,<5.0.0"
urllib3 = ">=2.0.7,<3.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
black = "*"
types-requests = "*"
pre-commit = "*"
types-toml = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"